Bug 1251138 - Dev Tools Performance Settings Popup button not visible on reduced size browser, r=jsantell
UltraBlame original commit: 506aa86bfb91a6d033b2a0def1db082e09daef0e

--- a/devtools/client/themes/performance.css
+++ b/devtools/client/themes/performance.css
@@ -978,6 +978,42 @@ bottom
 ;
 }
 .
+tool
+-
+disabled
+-
+message
+{
+text
+-
+align
+:
+center
+;
+}
+.
+console
+-
+profile
+-
+recording
+-
+notice
+.
+console
+-
+profile
+-
+stop
+-
+notice
+{
+overflow
+:
+hidden
+;
+}
+.
 console
 -
 profile
